@@ -1,0 +1,3 @@
+// PR c++/51248
+
+enum E { e = sizeof(const E*) };
