@@ -1,3 +1,8 @@
+2011-12-14  Jason Merrill  <jason@redhat.com>
+
+	PR c++/51248
+	* g++.dg/other/enum2.C: New.
+
 2011-12-13  Jason Merrill  <jason@redhat.com>
 
 	PR c++/51406
