@@ -1,3 +1,9 @@
+2011-12-14  Jason Merrill  <jason@redhat.com>
+
+	PR c++/51248
+	* decl.c (copy_type_enum): Also update variants.
+	(finish_enum): Allow variants of complete enums.
+
 2011-12-13  Jason Merrill  <jason@redhat.com>
 
 	PR c++/51406
